--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,9 @@ set -g status-left "#S "
 
 # Initialize TMUX plugin manager
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# Adding default terminal
+set -g default-terminal "screen-256color"
+
+#escape time reduced https://github.com/neovim/neovim/issues/2035
+set -g escape-time 10
