--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set-option -g default-shell /bin/zsh
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Solarized theme
 set -g @plugin 'seebi/tmux-colors-solarized'
@@ -61,7 +63,16 @@ set -g status-left "#S "
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # Adding default terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal screen-256color
 
 #escape time reduced https://github.com/neovim/neovim/issues/2035
 set -g escape-time 10
+
+# Custom menu bar
+set -g status-right '#[fg=green]#[fg=blue]'
+
+set -g @continuum-restore 'on'
+
+#enable true colors
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
