Session in alphabetical order

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,9 @@ bind -n C-Up resize-pane -U 5
 
 bind c new-window -c '#{pane_current_path}'
 
+# session in alphabetical order
+bind s choose-tree -s -O name
+
 set-option -g base-index 1
 set-option -g renumber-windows on
 
