--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set -g @colors-solarized 'dark'
 
 unbind C-b
 set -g prefix C-s
-bind-key ñ source $HOME/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key I source $HOME/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
@@ -33,6 +33,9 @@ bind -n C-Left resize-pane -L 10
 bind -n C-Right resize-pane -R 10
 bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
+
+# tmux resurrect binding
+set -g @resurrect-save 'Y'
 
 bind c new-window -c '#{pane_current_path}'
 
@@ -74,7 +77,9 @@ set -g escape-time 10
 # Custom menu bar
 set -g status-right '#[fg=green]#[fg=blue]'
 
+# Continuing save
 set -g @continuum-restore 'on'
+
 
 #enable true colors
 set-option -sa terminal-overrides ',xterm-256color:RGB'
